--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:GDk6P3vEScIpwg93lzZsIqHCBVD+iC8eLdQuvLRdkaw=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
